Bug 1100210: Mark MPEG2 Layer 1,2,3 audio as MP3. r=k17e

Extract data from ESDS atom's objectTypeIndication